[package]
name = "audit-layer"
description = "A tracing Layer that pushes specific log lines to an audit_log over HTTP"
authors = ["Devdutt Shenoi <devdutt@outlook.in>"]
license-file = "LICENSE"
repository = "https://github.com/de-sh/audit-layer"
keywords = ["tracing", "logging", "audit-logging"]
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
